name:                masonry
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/masonry#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Masonry
                     , PrimRoom
                     , RandNum
                     , Type
                     , SVG
                     , Separate
                     , Render
  build-depends:       base >= 4.7 && < 5
                     , sdl2
                     , random
                     , linear
  default-language:    Haskell2010

executable masonry-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , masonry
                     , random
                     , linear
                     , sdl2
  default-language:    Haskell2010

test-suite masonry-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , masonry
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/masonry
